2000-05-02  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11049: Completion/Base/_arguments, Completion/Base/_first,
 	Completion/Builtins/_hash, Completion/Core/_expand,
 	Completion/User/_gprof, Completion/User/_mount,
 	Completion/User/_socket, Completion/User/_urls: completion
 	cleanup, mostly _wanted and $expl
	
	* 11048: Completion/Base/_first, Completion/Core/_complete,
 	Completion/Core/_path_files: make completion-in-vared complete
 	parameter values as default; cleanup for _path_files
	
	* 11047: Completion/Core/_sort_tags, Doc/Zsh/compsys.yo,
 	Doc/Zsh/compwid.yo: completion doc fixes and cleanup; _sort_tags
 	updated
	
2000-05-01  Bart Schaefer  <schaefer@zsh.org>

	* 11043: Completion/Core/_expand, Completion/User/_nedit: Catch
	an eval-time parse error by forcing the eval into a subshell;
	don't fail on nonexistent ~/.nedit file.

2000-05-01  Oliver Kiddle  <opk@zsh.org>

	* 11041: Completion/User/.distfiles, Completion/User/_bzip2:
	Use of _arguments for bzip2 completion

	* 11037: Etc/MACHINES, Etc/NEWS, Etc/completion-style-guide,
	Etc/zsh-development-guide: spelling corrections

2000-04-30  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 11033: Completion/Commands/.distfiles,
	Completion/User/.distfiles, Config/version.mk, Etc/NEWS:
	new NEWS and minor fixes for version 3.1.7-pre-2.

2000-04-30  Bart Schaefer  <schaefer@zsh.org>

	* 11032: Src/init.c: Fix signed-ness problem reported by OPK.

2000-04-30  Oliver Kiddle  <opk@zsh.org>

	* 11031: Src/math.c, Src/glob.c, Src/module.c, Src/Zle/compcore.c
	Src/Zle/compresult.c: AIX dependency fixes.

2000-04-30  Bart Schaefer  <schaefer@zsh.org>

	* 11029: Src/hashtable.c, Src/signals.c: Back out more bits of
	11015 made obsolete by 11026.

2000-04-30  Clint Adams  <schizo@debian.org>

	* 11027: Josip Rodin: Completion/User/_joe:
	completion for joe.

2000-04-30  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 11026: Src/builtin.c, Src/hashtable.c, Src/signals.c,